--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -29,9 +30,11 @@
     "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.10.0",
     "sass": "^1.83.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.1",
@@ -40,6 +43,7 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.14",
+    "@types/nodemailer": "^6.4.17",
     "husky": "^9.1.7",
     "lint-staged": "^15.3.0",
     "morgan": "^1.10.0",
